Implement basic Lua game scripting functionality
- Add transform and renderable APIs for Lua integration
- Set up entity lifecycle functions (on_start, on_frame, on_end)
- Fix parameter handling in transform/rendering functions
- Add example Lua script demonstrating basic entity creation and movement

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fs = "0.0.5"
+futures = "0.3.31"
+futures-fs = "0.0.5"
 mlua = { version = "0.10.2", features = ["lua54"] }
+sdl2 = "0.37.0"
