feat(engine): Add tracing for improved debugging and diagnostics
- Introduced the `tracing` and `tracing-subscriber` crates to replace `println!` statements for structured logging.
- Updated Cargo.toml and Cargo.lock to include new dependencies for tracing.
- Enhanced logging in the `main` function and update loop for better insight into mouse and drag-drop events.
- Applied `#[derive(Debug)]` to structs across components and managers to support improved debug formatting.
- Refactored the `CollisionManager` and `TextManager` to improve error handling and consistency.
- Improved logging around rendering, state updates, and input handling.

This update facilitates more detailed and configurable runtime diagnostics, improving developer experience and debugging.

--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -9,3 +9,5 @@ futures = "0.3.31"
 futures-fs = "0.0.5"
 mlua = { version = "0.10.2", features = ["lua54"] }
 sdl2 = "0.37.0"
+tracing = { version = "0.1.41", features = ["attributes"]}
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"]}
